Update to Spring Boot 4